--- a/.github/workflows/UpdateToken.yml
+++ b/.github/workflows/UpdateToken.yml
@@ -32,6 +32,7 @@ jobs:
         GH_REPO: ${{ github.repository }}
         #以下是微软的账号信息（修改以下，类推复制增加）
         APP_NUM: ${{ secrets.APP_NUM }} 
+        REDIRECT_URI: ${{ secrets.REDIRECT_URL }}
         #账号/应用1
         MS_TOKEN_1: ${{ secrets.MS_TOKEN }} 
         CLIENT_ID_1: ${{ secrets.CLIENT_ID }}
@@ -160,277 +161,5 @@ jobs:
         MS_TOKEN_32: ${{ secrets.MS_TOKEN_32 }} 
         CLIENT_ID_32: ${{ secrets.CLIENT_ID_32 }}
         CLIENT_SECRET_32: ${{ secrets.CLIENT_SECRET_32 }}
-
-        MS_TOKEN_33: ${{ secrets.MS_TOKEN_33 }} 
-        CLIENT_ID_33: ${{ secrets.CLIENT_ID_33 }}
-        CLIENT_SECRET_33: ${{ secrets.CLIENT_SECRET_33 }}
-
-        MS_TOKEN_34: ${{ secrets.MS_TOKEN_34 }} 
-        CLIENT_ID_34: ${{ secrets.CLIENT_ID_34 }}
-        CLIENT_SECRET_34: ${{ secrets.CLIENT_SECRET_34 }}
-
-        MS_TOKEN_35: ${{ secrets.MS_TOKEN_35 }} 
-        CLIENT_ID_35: ${{ secrets.CLIENT_ID_35 }}
-        CLIENT_SECRET_35: ${{ secrets.CLIENT_SECRET_35 }}
-
-        MS_TOKEN_36: ${{ secrets.MS_TOKEN_36 }} 
-        CLIENT_ID_36: ${{ secrets.CLIENT_ID_36 }}
-        CLIENT_SECRET_36: ${{ secrets.CLIENT_SECRET_36 }}
-
-        MS_TOKEN_37: ${{ secrets.MS_TOKEN_37 }} 
-        CLIENT_ID_37: ${{ secrets.CLIENT_ID_37 }}
-        CLIENT_SECRET_37: ${{ secrets.CLIENT_SECRET_37 }}
-
-        MS_TOKEN_38: ${{ secrets.MS_TOKEN_38 }} 
-        CLIENT_ID_38: ${{ secrets.CLIENT_ID_38 }}
-        CLIENT_SECRET_38: ${{ secrets.CLIENT_SECRET_38 }}
-
-        MS_TOKEN_39: ${{ secrets.MS_TOKEN_39 }} 
-        CLIENT_ID_39: ${{ secrets.CLIENT_ID_39 }}
-        CLIENT_SECRET_39: ${{ secrets.CLIENT_SECRET_39 }}
-
-        MS_TOKEN_40: ${{ secrets.MS_TOKEN_40 }} 
-        CLIENT_ID_40: ${{ secrets.CLIENT_ID_40 }}
-        CLIENT_SECRET_40: ${{ secrets.CLIENT_SECRET_40 }}
-
-        MS_TOKEN_41: ${{ secrets.MS_TOKEN_41 }} 
-        CLIENT_ID_41: ${{ secrets.CLIENT_ID_41 }}
-        CLIENT_SECRET_41: ${{ secrets.CLIENT_SECRET_41 }}
-
-        MS_TOKEN_42: ${{ secrets.MS_TOKEN_42 }} 
-        CLIENT_ID_42: ${{ secrets.CLIENT_ID_42 }}
-        CLIENT_SECRET_42: ${{ secrets.CLIENT_SECRET_42 }}
-
-        MS_TOKEN_43: ${{ secrets.MS_TOKEN_43 }} 
-        CLIENT_ID_43: ${{ secrets.CLIENT_ID_43 }}
-        CLIENT_SECRET_43: ${{ secrets.CLIENT_SECRET_43 }}
-
-        MS_TOKEN_44: ${{ secrets.MS_TOKEN_44 }} 
-        CLIENT_ID_44: ${{ secrets.CLIENT_ID_44 }}
-        CLIENT_SECRET_44: ${{ secrets.CLIENT_SECRET_44 }}
-
-        MS_TOKEN_45: ${{ secrets.MS_TOKEN_45 }} 
-        CLIENT_ID_45: ${{ secrets.CLIENT_ID_45 }}
-        CLIENT_SECRET_45: ${{ secrets.CLIENT_SECRET_45 }}
-
-        MS_TOKEN_46: ${{ secrets.MS_TOKEN_46 }} 
-        CLIENT_ID_46: ${{ secrets.CLIENT_ID_46 }}
-        CLIENT_SECRET_46: ${{ secrets.CLIENT_SECRET_46 }}
-
-        MS_TOKEN_47: ${{ secrets.MS_TOKEN_47 }} 
-        CLIENT_ID_47: ${{ secrets.CLIENT_ID_47 }}
-        CLIENT_SECRET_47: ${{ secrets.CLIENT_SECRET_47 }}
-
-        MS_TOKEN_48: ${{ secrets.MS_TOKEN_48 }} 
-        CLIENT_ID_48: ${{ secrets.CLIENT_ID_48 }}
-        CLIENT_SECRET_48: ${{ secrets.CLIENT_SECRET_48 }}
-
-        MS_TOKEN_49: ${{ secrets.MS_TOKEN_49 }} 
-        CLIENT_ID_49: ${{ secrets.CLIENT_ID_49 }}
-        CLIENT_SECRET_49: ${{ secrets.CLIENT_SECRET_49 }}
-
-        MS_TOKEN_50: ${{ secrets.MS_TOKEN_50 }} 
-        CLIENT_ID_50: ${{ secrets.CLIENT_ID_50 }}
-        CLIENT_SECRET_50: ${{ secrets.CLIENT_SECRET_50 }}
-
-        MS_TOKEN_51: ${{ secrets.MS_TOKEN_51 }} 
-        CLIENT_ID_51: ${{ secrets.CLIENT_ID_51 }}
-        CLIENT_SECRET_51: ${{ secrets.CLIENT_SECRET_51 }}
-
-        MS_TOKEN_52: ${{ secrets.MS_TOKEN_52 }} 
-        CLIENT_ID_52: ${{ secrets.CLIENT_ID_52 }}
-        CLIENT_SECRET_52: ${{ secrets.CLIENT_SECRET_52 }}
-
-        MS_TOKEN_53: ${{ secrets.MS_TOKEN_53 }} 
-        CLIENT_ID_53: ${{ secrets.CLIENT_ID_53 }}
-        CLIENT_SECRET_53: ${{ secrets.CLIENT_SECRET_53 }}
-
-        MS_TOKEN_54: ${{ secrets.MS_TOKEN_54 }} 
-        CLIENT_ID_54: ${{ secrets.CLIENT_ID_54 }}
-        CLIENT_SECRET_54: ${{ secrets.CLIENT_SECRET_54 }}
-
-        MS_TOKEN_55: ${{ secrets.MS_TOKEN_55 }} 
-        CLIENT_ID_55: ${{ secrets.CLIENT_ID_55 }}
-        CLIENT_SECRET_55: ${{ secrets.CLIENT_SECRET_55 }}
-
-        MS_TOKEN_56: ${{ secrets.MS_TOKEN_56 }} 
-        CLIENT_ID_56: ${{ secrets.CLIENT_ID_56 }}
-        CLIENT_SECRET_56: ${{ secrets.CLIENT_SECRET_56 }}
-
-        MS_TOKEN_57: ${{ secrets.MS_TOKEN_57 }} 
-        CLIENT_ID_57: ${{ secrets.CLIENT_ID_57 }}
-        CLIENT_SECRET_57: ${{ secrets.CLIENT_SECRET_57 }}
-
-        MS_TOKEN_58: ${{ secrets.MS_TOKEN_58 }} 
-        CLIENT_ID_58: ${{ secrets.CLIENT_ID_58 }}
-        CLIENT_SECRET_58: ${{ secrets.CLIENT_SECRET_58 }}
-
-        MS_TOKEN_59: ${{ secrets.MS_TOKEN_59 }} 
-        CLIENT_ID_59: ${{ secrets.CLIENT_ID_59 }}
-        CLIENT_SECRET_59: ${{ secrets.CLIENT_SECRET_59 }}
-
-        MS_TOKEN_60: ${{ secrets.MS_TOKEN_60 }} 
-        CLIENT_ID_60: ${{ secrets.CLIENT_ID_60 }}
-        CLIENT_SECRET_60: ${{ secrets.CLIENT_SECRET_60 }}
-
-        MS_TOKEN_61: ${{ secrets.MS_TOKEN_61 }} 
-        CLIENT_ID_61: ${{ secrets.CLIENT_ID_61 }}
-        CLIENT_SECRET_61: ${{ secrets.CLIENT_SECRET_61 }}
-
-        MS_TOKEN_62: ${{ secrets.MS_TOKEN_62 }} 
-        CLIENT_ID_62: ${{ secrets.CLIENT_ID_62 }}
-        CLIENT_SECRET_62: ${{ secrets.CLIENT_SECRET_62 }}
-
-        MS_TOKEN_63: ${{ secrets.MS_TOKEN_63 }} 
-        CLIENT_ID_63: ${{ secrets.CLIENT_ID_63 }}
-        CLIENT_SECRET_63: ${{ secrets.CLIENT_SECRET_63 }}
-
-        MS_TOKEN_64: ${{ secrets.MS_TOKEN_64 }} 
-        CLIENT_ID_64: ${{ secrets.CLIENT_ID_64 }}
-        CLIENT_SECRET_64: ${{ secrets.CLIENT_SECRET_64 }}
-
-        MS_TOKEN_65: ${{ secrets.MS_TOKEN_65 }} 
-        CLIENT_ID_65: ${{ secrets.CLIENT_ID_65 }}
-        CLIENT_SECRET_65: ${{ secrets.CLIENT_SECRET_65 }}
-
-        MS_TOKEN_66: ${{ secrets.MS_TOKEN_66 }} 
-        CLIENT_ID_66: ${{ secrets.CLIENT_ID_66 }}
-        CLIENT_SECRET_66: ${{ secrets.CLIENT_SECRET_66 }}
-
-        MS_TOKEN_67: ${{ secrets.MS_TOKEN_67 }} 
-        CLIENT_ID_67: ${{ secrets.CLIENT_ID_67 }}
-        CLIENT_SECRET_67: ${{ secrets.CLIENT_SECRET_67 }}
-
-        MS_TOKEN_68: ${{ secrets.MS_TOKEN_68 }} 
-        CLIENT_ID_68: ${{ secrets.CLIENT_ID_68 }}
-        CLIENT_SECRET_68: ${{ secrets.CLIENT_SECRET_68 }}
-
-        MS_TOKEN_69: ${{ secrets.MS_TOKEN_69 }} 
-        CLIENT_ID_69: ${{ secrets.CLIENT_ID_69 }}
-        CLIENT_SECRET_69: ${{ secrets.CLIENT_SECRET_69 }}
-
-        MS_TOKEN_70: ${{ secrets.MS_TOKEN_70 }} 
-        CLIENT_ID_70: ${{ secrets.CLIENT_ID_70 }}
-        CLIENT_SECRET_70: ${{ secrets.CLIENT_SECRET_70 }}
-
-        MS_TOKEN_71: ${{ secrets.MS_TOKEN_71 }} 
-        CLIENT_ID_71: ${{ secrets.CLIENT_ID_71 }}
-        CLIENT_SECRET_71: ${{ secrets.CLIENT_SECRET_71 }}
-
-        MS_TOKEN_72: ${{ secrets.MS_TOKEN_72 }} 
-        CLIENT_ID_72: ${{ secrets.CLIENT_ID_72 }}
-        CLIENT_SECRET_72: ${{ secrets.CLIENT_SECRET_72 }}
-
-        MS_TOKEN_73: ${{ secrets.MS_TOKEN_73 }} 
-        CLIENT_ID_73: ${{ secrets.CLIENT_ID_73 }}
-        CLIENT_SECRET_73: ${{ secrets.CLIENT_SECRET_73 }}
-
-        MS_TOKEN_74: ${{ secrets.MS_TOKEN_74 }} 
-        CLIENT_ID_74: ${{ secrets.CLIENT_ID_74 }}
-        CLIENT_SECRET_74: ${{ secrets.CLIENT_SECRET_74 }}
-
-        MS_TOKEN_75: ${{ secrets.MS_TOKEN_75 }} 
-        CLIENT_ID_75: ${{ secrets.CLIENT_ID_75 }}
-        CLIENT_SECRET_75: ${{ secrets.CLIENT_SECRET_75 }}
-
-        MS_TOKEN_76: ${{ secrets.MS_TOKEN_76 }} 
-        CLIENT_ID_76: ${{ secrets.CLIENT_ID_76 }}
-        CLIENT_SECRET_76: ${{ secrets.CLIENT_SECRET_76 }}
-
-        MS_TOKEN_77: ${{ secrets.MS_TOKEN_77 }} 
-        CLIENT_ID_77: ${{ secrets.CLIENT_ID_77 }}
-        CLIENT_SECRET_77: ${{ secrets.CLIENT_SECRET_77 }}
-
-        MS_TOKEN_78: ${{ secrets.MS_TOKEN_78 }} 
-        CLIENT_ID_78: ${{ secrets.CLIENT_ID_78 }}
-        CLIENT_SECRET_78: ${{ secrets.CLIENT_SECRET_78 }}
-
-        MS_TOKEN_79: ${{ secrets.MS_TOKEN_79 }} 
-        CLIENT_ID_79: ${{ secrets.CLIENT_ID_79 }}
-        CLIENT_SECRET_79: ${{ secrets.CLIENT_SECRET_79 }}
-
-        MS_TOKEN_80: ${{ secrets.MS_TOKEN_80 }} 
-        CLIENT_ID_80: ${{ secrets.CLIENT_ID_80 }}
-        CLIENT_SECRET_80: ${{ secrets.CLIENT_SECRET_80 }}
-
-        MS_TOKEN_81: ${{ secrets.MS_TOKEN_81 }} 
-        CLIENT_ID_81: ${{ secrets.CLIENT_ID_81 }}
-        CLIENT_SECRET_81: ${{ secrets.CLIENT_SECRET_81 }}
-
-        MS_TOKEN_82: ${{ secrets.MS_TOKEN_82 }} 
-        CLIENT_ID_82: ${{ secrets.CLIENT_ID_82 }}
-        CLIENT_SECRET_82: ${{ secrets.CLIENT_SECRET_82 }}
-
-        MS_TOKEN_83: ${{ secrets.MS_TOKEN_83 }} 
-        CLIENT_ID_83: ${{ secrets.CLIENT_ID_83 }}
-        CLIENT_SECRET_83: ${{ secrets.CLIENT_SECRET_83 }}
-
-        MS_TOKEN_84: ${{ secrets.MS_TOKEN_84 }} 
-        CLIENT_ID_84: ${{ secrets.CLIENT_ID_84 }}
-        CLIENT_SECRET_84: ${{ secrets.CLIENT_SECRET_84 }}
-
-        MS_TOKEN_85: ${{ secrets.MS_TOKEN_85 }} 
-        CLIENT_ID_85: ${{ secrets.CLIENT_ID_85 }}
-        CLIENT_SECRET_85: ${{ secrets.CLIENT_SECRET_85 }}
-
-        MS_TOKEN_86: ${{ secrets.MS_TOKEN_86 }} 
-        CLIENT_ID_86: ${{ secrets.CLIENT_ID_86 }}
-        CLIENT_SECRET_86: ${{ secrets.CLIENT_SECRET_86 }}
-
-        MS_TOKEN_87: ${{ secrets.MS_TOKEN_87 }} 
-        CLIENT_ID_87: ${{ secrets.CLIENT_ID_87 }}
-        CLIENT_SECRET_87: ${{ secrets.CLIENT_SECRET_87 }}
-
-        MS_TOKEN_88: ${{ secrets.MS_TOKEN_88 }} 
-        CLIENT_ID_88: ${{ secrets.CLIENT_ID_88 }}
-        CLIENT_SECRET_88: ${{ secrets.CLIENT_SECRET_88 }}
-
-        MS_TOKEN_89: ${{ secrets.MS_TOKEN_89 }} 
-        CLIENT_ID_89: ${{ secrets.CLIENT_ID_89 }}
-        CLIENT_SECRET_89: ${{ secrets.CLIENT_SECRET_89 }}
-
-        MS_TOKEN_90: ${{ secrets.MS_TOKEN_90 }} 
-        CLIENT_ID_90: ${{ secrets.CLIENT_ID_90 }}
-        CLIENT_SECRET_90: ${{ secrets.CLIENT_SECRET_90 }}
-
-        MS_TOKEN_91: ${{ secrets.MS_TOKEN_91 }} 
-        CLIENT_ID_91: ${{ secrets.CLIENT_ID_91 }}
-        CLIENT_SECRET_91: ${{ secrets.CLIENT_SECRET_91 }}
-
-        MS_TOKEN_92: ${{ secrets.MS_TOKEN_92 }} 
-        CLIENT_ID_92: ${{ secrets.CLIENT_ID_92 }}
-        CLIENT_SECRET_92: ${{ secrets.CLIENT_SECRET_92 }}
-
-        MS_TOKEN_93: ${{ secrets.MS_TOKEN_93 }} 
-        CLIENT_ID_93: ${{ secrets.CLIENT_ID_93 }}
-        CLIENT_SECRET_93: ${{ secrets.CLIENT_SECRET_93 }}
-
-        MS_TOKEN_94: ${{ secrets.MS_TOKEN_94 }} 
-        CLIENT_ID_94: ${{ secrets.CLIENT_ID_94 }}
-        CLIENT_SECRET_94: ${{ secrets.CLIENT_SECRET_94 }}
-
-        MS_TOKEN_95: ${{ secrets.MS_TOKEN_95 }} 
-        CLIENT_ID_95: ${{ secrets.CLIENT_ID_95 }}
-        CLIENT_SECRET_95: ${{ secrets.CLIENT_SECRET_95 }}
-
-        MS_TOKEN_96: ${{ secrets.MS_TOKEN_96 }} 
-        CLIENT_ID_96: ${{ secrets.CLIENT_ID_96 }}
-        CLIENT_SECRET_96: ${{ secrets.CLIENT_SECRET_96 }}
-
-        MS_TOKEN_97: ${{ secrets.MS_TOKEN_97 }} 
-        CLIENT_ID_97: ${{ secrets.CLIENT_ID_97 }}
-        CLIENT_SECRET_97: ${{ secrets.CLIENT_SECRET_97 }}
-
-        MS_TOKEN_98: ${{ secrets.MS_TOKEN_98 }} 
-        CLIENT_ID_98: ${{ secrets.CLIENT_ID_98 }}
-        CLIENT_SECRET_98: ${{ secrets.CLIENT_SECRET_98 }}
-
-        MS_TOKEN_99: ${{ secrets.MS_TOKEN_99 }} 
-        CLIENT_ID_99: ${{ secrets.CLIENT_ID_99 }}
-        CLIENT_SECRET_99: ${{ secrets.CLIENT_SECRET_99 }}
-
-        MS_TOKEN_100: ${{ secrets.MS_TOKEN_100 }} 
-        CLIENT_ID_100: ${{ secrets.CLIENT_ID_100 }}
-        CLIENT_SECRET_100: ${{ secrets.CLIENT_SECRET_100 }}
       run: |
         python UpdateToken.py
